fisrt view of footer

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -15,7 +15,7 @@
         <div>Search Loup</div>
       </div>
       <div class="header-row2">
-        <h1>TITLE - FESTIVAL SENS INTERDIT</h1>
+        <h1>TITLE - FESTIVAL SENS INTERDITS</h1>
         <h2>7e édition du 16 au 27 Octobre 2021</h2>
         <a>Billeterie</a>
         <a>Programme</a>
@@ -23,6 +23,63 @@
       </div>
     </header>
     <main>This is the main</main>
-    <footer>This is the footer</footer>
+    <footer>
+      <div class="footer-column1">
+        <div class="footer-column1-title">TITLE - Sens Interdits</div>
+        <div class="footer-column1-partners">
+          <h2>Nos Partenaires</h2>
+          <ul>
+            <li><img href="#" alt="logo-partner1" /></li>
+            <li><img href="#" alt="logo-partner2" /></li>
+            <li><img href="#" alt="logo-partner3" /></li>
+            <li><img href="#" alt="logo-partner4" /></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-column2">
+        <div class="footer-column2-newsletter">
+          <p>
+            Sens interdits est une association et un Festival de théâtre
+            international
+          </p>
+          <div>Newsletter Block</div>
+        </div>
+        <div class="footer-column2-socialnetwork">
+          <p>Suivez-nous</p>
+          <p>Réseaux sociaux</p>
+        </div>
+        <div class="footer-column2-listlink">
+          <div>
+            <p>Vous informer</p>
+            <ul>
+              <li><a>Programmation</a></li>
+              <li><a>Billeterie</a></li>
+              <li><a>Sens interdits</a></li>
+              <li><a>Partenaires</a></li>
+              <li><a>Archives</a></li>
+            </ul>
+          </div>
+          <div>
+            <p>Presse</p>
+            <ul>
+              <li><a>Dossier de presse</a></li>
+              <li><a>Kit presse</a></li>
+              <li><a>Revue de presse</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div>
+            <p>Sens interdit</p>
+            <ul>
+              <li><a>Le festival</a></li>
+              <li><a>L'association</a></li>
+              <li><a>L'équipe</a></li>
+              <li><a>Soutenez-nous</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
