--- a/public/template/index.css
+++ b/public/template/index.css
@@ -16,16 +16,17 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 200px;
 }
 main {
   grid-area: 2 / 1 / 5 / 6;
   height: 100vh;
-  border: solid blue 3px;
 }
 footer {
   grid-area: 5 / 1 / 6 / 6;
   color: white;
   background-color: black;
+  display: flex;
 }
 
 /* HEADER CSS */
@@ -38,4 +39,24 @@ footer {
 .header-row2 {
   display: flex;
   justify-content: space-between;
+}
+
+/* FOOTER CSS */
+/* FOOTER COLUMN1 */
+.footer-column1 {
+  display: flex;
+  flex-direction: column;
+}
+.footer-column1-title {
+}
+.footer-column1-partners {
+}
+/* FOOTER COLUMN2 */
+.footer-column2 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 100px;
+}
+.footer-column2-listlink {
+  display: flex;
 }
