change some text in html file

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -17,7 +17,7 @@
       <div class="header-row2">
         <h1>TITLE - FESTIVAL SENS INTERDITS</h1>
         <h2>7e édition du 16 au 27 Octobre 2021</h2>
-        <a>Billeterie</a>
+        <a>Billetterie</a>
         <a>Programme</a>
         <div>Réseaux sociaux</div>
       </div>
@@ -53,7 +53,7 @@
             <p>Vous informer</p>
             <ul>
               <li><a>Programmation</a></li>
-              <li><a>Billeterie</a></li>
+              <li><a>Billetterie</a></li>
               <li><a>Sens interdits</a></li>
               <li><a>Partenaires</a></li>
               <li><a>Archives</a></li>
