--- a/public/template/index.html
+++ b/public/template/index.html
@@ -19,7 +19,26 @@
         <h2>7e édition du 16 au 27 Octobre 2021</h2>
         <a>Billetterie</a>
         <a>Programme</a>
-        <div>Réseaux sociaux</div>
+        <div class="social-network">
+          <a href="#" title="link-to-facebook"
+            ><img
+              src="images/facebook.png"
+              alt="facebook"
+              style="filter: invert(100%)"
+          /></a>
+          <a href="#" title="link-to-instagram"
+            ><img
+              src="images/instagram.png"
+              alt="instagram"
+              style="filter: invert(100%)"
+          /></a>
+          <a href="#" title="link-to-linkedin"
+            ><img
+              src="images/linkedin.png"
+              alt="linkedin"
+              style="filter: invert(100%)"
+          /></a>
+        </div>
       </div>
     </header>
     <main>This is the main</main>
@@ -29,10 +48,10 @@
         <div class="footer-column1-partners">
           <h2>Nos Partenaires</h2>
           <ul>
-            <li><img href="#" alt="logo-partner1" /></li>
-            <li><img href="#" alt="logo-partner2" /></li>
-            <li><img href="#" alt="logo-partner3" /></li>
-            <li><img href="#" alt="logo-partner4" /></li>
+            <li><img src="#" alt="logo-partner1" /></li>
+            <li><img src="#" alt="logo-partner2" /></li>
+            <li><img src="#" alt="logo-partner3" /></li>
+            <li><img src="#" alt="logo-partner4" /></li>
           </ul>
         </div>
       </div>
@@ -46,7 +65,26 @@
         </div>
         <div class="footer-column2-socialnetwork">
           <p>Suivez-nous</p>
-          <p>Réseaux sociaux</p>
+          <div class="social-network">
+            <a href="#" title="link-to-facebook"
+              ><img
+                src="images/facebook.png"
+                alt="facebook"
+                style="filter: invert(100%)"
+            /></a>
+            <a href="#" title="link-to-instagram"
+              ><img
+                src="images/instagram.png"
+                alt="instagram"
+                style="filter: invert(100%)"
+            /></a>
+            <a href="#" title="link-to-linkedin"
+              ><img
+                src="images/linkedin.png"
+                alt="linkedin"
+                style="filter: invert(100%)"
+            /></a>
+          </div>
         </div>
         <div class="footer-column2-listlink">
           <div>
