--- a/public/template/index.html
+++ b/public/template/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="HTML, CSS, template" />
+    <meta
+      name="description"
+      content="a static web page to view the layout of the elements in the home page"
+    />
+    <meta name="authors" content="Marine Montailler, Justine Hell" />
     <link rel="stylesheet" media="screen" type="text/css" href="index.css" />
     <title>Template HTML v1</title>
   </head>
