change main logo in html

--- a/public/template/index.css
+++ b/public/template/index.css
@@ -7,6 +7,7 @@ body {
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  font-family: arial, sans-serif;
 }
 
 header {
