--- a/public/template/index.html
+++ b/public/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,12 @@
         <div>Search Loup</div>
       </div>
       <div class="header-row2">
-        <h1>TITLE - FESTIVAL SENS INTERDITS</h1>
+        <div class="main-logo">
+          <h2>FESTIVAL INTERNATIONAL</h2>
+          <h1>SENS INTERDITS</h1>
+          <h2>THEATRE DE L'URGENCE</h2>
+        </div>
+
         <h2>7e édition du 16 au 27 Octobre 2021</h2>
         <a>Billetterie</a>
         <a>Programme</a>
