--- a/public/template/index.css
+++ b/public/template/index.css
@@ -40,6 +40,48 @@ footer {
 .header-row2 {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.header-row2 h1 {
+  font-size: 2.5em;
+}
+
+.main-logo {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  margin-right: 0;
+  width: 500px;
+  border-right: solid white 3px;
+}
+.main-logo h1,
+h3 {
+  margin: 0;
+}
+.main-logo h1 {
+  font-size: 3.5em;
+}
+.main-logo h1 span {
+  color: red;
+}
+.main-logo :nth-child(3) {
+  color: red;
+  margin-left: 250px;
+}
+
+.next-festival-date {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin-left: 0;
+}
+.next-festival-date,
+p {
+  margin: 0;
+}
+.next-festival-date p span {
+  font-size: 2em;
+  color: red;
 }
 
 /* FOOTER CSS */
