--- a/public/template/index.html
+++ b/public/template/index.html
@@ -16,12 +16,17 @@
       </div>
       <div class="header-row2">
         <div class="main-logo">
-          <h2>FESTIVAL INTERNATIONAL</h2>
-          <h1>SENS INTERDITS</h1>
-          <h2>THEATRE DE L'URGENCE</h2>
+          <h3>FESTIVAL INTERNATIONAL</h3>
+          <h1><span>SENS</span> INTERDITS</h1>
+          <h3>THEATRE DE L'URGENCE</h3>
+        </div>
+        <div class="next-festival-date">
+          <p><span>7</span>ème édition</p>
+          <p>du <span>16</span> au <span>27</span></p>
+          <p>Octobre 2021</p>
+          <p>LYON METROPOLE</p>
         </div>
 
-        <h2>7e édition du 16 au 27 Octobre 2021</h2>
         <a>Billetterie</a>
         <a>Programme</a>
         <div class="social-network">
