change src for logo festival

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -55,11 +55,7 @@
     <footer>
       <div class="footer-column1">
         <div class="footer-column1-title">
-          <img
-            src="/home/justine/Images/logo-festival-international-noir-rouge.png"
-            width="250"
-            alt="logo-partner2"
-          />
+          <img src="images/logo_festival.png" width="250" alt="logo-partner2" />
         </div>
         <div class="footer-column1-partners">
           <p>Nos Partenaires</p>
