logo social network header ok

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -9,10 +9,22 @@
   <body>
     <header>
       <div class="header-row1">
-        <div>FR/EN</div>
-        <div>Newsletter</div>
+        <div class="fr-en">
+          <p>F R</p>
+          <span> | </span>
+          <p>E N</p>
+        </div>
+        <div class="highlight">NEWSLETTER</div>
         <nav>This is the navbar</nav>
-        <div>Search Loup</div>
+        <div>
+          <img
+            src="images/loupe.png"
+            alt="search-loup"
+            style="filter: invert(100%)"
+            width="50
+            "
+          />
+        </div>
       </div>
       <div class="header-row2">
         <div class="main-logo">
@@ -27,26 +39,39 @@
           <p>LYON METROPOLE</p>
         </div>
 
-        <a>Billetterie</a>
-        <a>Programme</a>
+        <a href="#" title="billetterie" class="highlight">BILLETTERIE</a>
+        <a href="#" title="programme" class="highlight">PROGRAMME</a>
         <div class="social-network">
           <a href="#" title="link-to-facebook"
             ><img
               src="images/facebook.png"
               alt="facebook"
               style="filter: invert(100%)"
+              width="30"
           /></a>
           <a href="#" title="link-to-instagram"
             ><img
               src="images/instagram.png"
               alt="instagram"
               style="filter: invert(100%)"
+              width="30"
+          /></a>
+          <a href="#" title="link-to-twitter"
+            ><img
+              src="images/twitter.png"
+              alt="twitter"
+              style="filter: invert(100%)"
+              width="30"
+          /></a>
+          <a href="#" title="link-to-linkedin"
+            ><img src="images/linkedin.png" alt="linkedin" width="30"
           /></a>
           <a href="#" title="link-to-linkedin"
             ><img
-              src="images/linkedin.png"
-              alt="linkedin"
+              src="images/share.png"
+              alt="share"
               style="filter: invert(100%)"
+              width="30"
           /></a>
         </div>
       </div>
