--- a/public/template/index.css
+++ b/public/template/index.css
@@ -29,18 +29,38 @@ footer {
   background-color: black;
   display: flex;
 }
+.highlight {
+  color: black;
+  background: white;
+}
+
+a {
+  text-decoration: none;
+}
 
 /* HEADER CSS */
 /* HEADER ROW 1 */
 .header-row1 {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  margin: 5px 30px 0;
+  padding: 0;
+}
+.fr-en {
+  display: flex;
+}
+.fr-en span {
+  margin-left: 10px;
+  margin-right: 10px;
+  color: red;
 }
 /* HEADER ROW 2 */
 .header-row2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 20px;
 }
 .header-row2 h1 {
   font-size: 2.5em;
