--- a/public/template/index.html
+++ b/public/template/index.html
@@ -33,7 +33,13 @@
           <h3>THEATRE DE L'URGENCE</h3>
         </div>
         <div class="next-festival-date">
-          <p><span>7</span>ème édition</p>
+          <div class="edition">
+            <div class="edition-number">7</div>
+            <div class="edition-text">
+              <p>ème</p>
+              <p>édition</p>
+            </div>
+          </div>
           <p>du <span>16</span> au <span>27</span></p>
           <p>Octobre 2021</p>
           <p>LYON METROPOLE</p>
