--- a/public/template/index.html
+++ b/public/template/index.html
@@ -15,7 +15,23 @@
           <p>E N</p>
         </div>
         <div class="highlight">NEWSLETTER</div>
-        <nav>This is the navbar</nav>
+        <div class="fr-en nav-bar">
+          <p>Accueil</p>
+          <span> | </span>
+          <p>Festival</p>
+          <span> | </span>
+          <p>Avec les publics</p>
+          <span> | </span>
+          <p>Association</p>
+          <span> | </span>
+          <p>Actualités</p>
+          <span> | </span>
+          <p>Archives</p>
+          <span> | </span>
+          <p>Espace pros</p>
+          <span> | </span>
+          <p>Contacts</p>
+        </div>
         <div>
           <img
             src="images/loupe.png"
@@ -29,7 +45,10 @@
       <div class="header-row2">
         <div class="main-logo">
           <h3>FESTIVAL INTERNATIONAL</h3>
-          <h1><span>SENS</span> INTERDITS</h1>
+          <h1>
+            <img src="images/sens.png" alt="sens" width="160" />
+            <img src="images/interdits.png" alt="interdits" width="280" />
+          </h1>
           <h3>THEATRE DE L'URGENCE</h3>
         </div>
         <div class="next-festival-date">
@@ -44,9 +63,11 @@
           <p>Octobre 2021</p>
           <p>LYON METROPOLE</p>
         </div>
+        <div class="billetterie-programme">
+          <a href="#" title="billetterie" class="highlight">BILLETTERIE </a>
+          <a href="#" title="programme" class="highlight">PROGRAMME</a>
+        </div>
 
-        <a href="#" title="billetterie" class="highlight">BILLETTERIE</a>
-        <a href="#" title="programme" class="highlight">PROGRAMME</a>
         <div class="social-network">
           <a href="#" title="link-to-facebook"
             ><img
