add social network logo in footer and change logo color in footer

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -170,18 +170,31 @@
                 src="images/facebook.png"
                 alt="facebook"
                 style="filter: invert(100%)"
+                width="30"
             /></a>
             <a href="#" title="link-to-instagram"
               ><img
                 src="images/instagram.png"
                 alt="instagram"
                 style="filter: invert(100%)"
+                width="30"
+            /></a>
+            <a href="#" title="link-to-twitter"
+              ><img
+                src="images/twitter.png"
+                alt="twitter"
+                style="filter: invert(100%)"
+                width="30"
+            /></a>
+            <a href="#" title="link-to-linkedin"
+              ><img src="images/linkedin.png" alt="linkedin" width="30"
             /></a>
             <a href="#" title="link-to-linkedin"
               ><img
-                src="images/linkedin.png"
-                alt="linkedin"
+                src="images/share.png"
+                alt="share"
                 style="filter: invert(100%)"
+                width="30"
             /></a>
           </div>
         </div>
