change alt with a sentence on each <a>

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -69,31 +69,31 @@
         </div>
 
         <div class="social-network">
-          <a href="#" title="link-to-facebook"
+          <a href="#" title="link to facebook"
             ><img
               src="images/facebook.png"
               alt="facebook"
               style="filter: invert(100%)"
               width="30"
           /></a>
-          <a href="#" title="link-to-instagram"
+          <a href="#" title="link to instagram"
             ><img
               src="images/instagram.png"
               alt="instagram"
               style="filter: invert(100%)"
               width="30"
           /></a>
-          <a href="#" title="link-to-twitter"
+          <a href="#" title="link to twitter"
             ><img
               src="images/twitter.png"
               alt="twitter"
               style="filter: invert(100%)"
               width="30"
           /></a>
-          <a href="#" title="link-to-linkedin"
+          <a href="#" title="link to linkedin"
             ><img src="images/linkedin.png" alt="linkedin" width="30"
           /></a>
-          <a href="#" title="link-to-linkedin"
+          <a href="#" title="link to share"
             ><img
               src="images/share.png"
               alt="share"
@@ -107,7 +107,7 @@
     <footer>
       <div class="footer-column1">
         <div class="footer-column1-title">
-          <img src="images/logo_festival.png" width="250" alt="logo-partner2" />
+          <img src="images/logo_festival.png" width="250" alt="logo partner2" />
         </div>
         <div class="footer-column1-partners">
           <p>Nos Partenaires</p>
@@ -165,31 +165,31 @@
         <div class="footer-column2-socialnetwork">
           <p>Suivez-nous !</p>
           <div class="social-network">
-            <a href="#" title="link-to-facebook"
+            <a href="#" title="link to facebook"
               ><img
                 src="images/facebook.png"
                 alt="facebook"
                 style="filter: invert(100%)"
                 width="30"
             /></a>
-            <a href="#" title="link-to-instagram"
+            <a href="#" title="link to instagram"
               ><img
                 src="images/instagram.png"
                 alt="instagram"
                 style="filter: invert(100%)"
                 width="30"
             /></a>
-            <a href="#" title="link-to-twitter"
+            <a href="#" title="link to twitter"
               ><img
                 src="images/twitter.png"
                 alt="twitter"
                 style="filter: invert(100%)"
                 width="30"
             /></a>
-            <a href="#" title="link-to-linkedin"
+            <a href="#" title="link to linkedin"
               ><img src="images/linkedin.png" alt="linkedin" width="30"
             /></a>
-            <a href="#" title="link-to-linkedin"
+            <a href="#" title="link to share"
               ><img
                 src="images/share.png"
                 alt="share"
