--- a/public/template/index.html
+++ b/public/template/index.html
@@ -32,7 +32,7 @@
           <span> | </span>
           <p>Contacts</p>
         </div>
-        <div>
+        <div class="search-loup">
           <img
             src="images/loupe.png"
             alt="search-loup"
