add new font gothamBold and gothamLight

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -171,34 +171,38 @@
           <div class="social-network">
             <a href="#" title="link to facebook"
               ><img
-                src="images/facebook.png"
+                src="images/facebook.svg"
                 alt="facebook"
                 style="filter: invert(100%)"
-                width="30"
+                width="110"
             /></a>
             <a href="#" title="link to instagram"
               ><img
-                src="images/instagram.png"
+                src="images/insta.svg"
                 alt="instagram"
                 style="filter: invert(100%)"
-                width="30"
+                width="110"
             /></a>
             <a href="#" title="link to twitter"
               ><img
-                src="images/twitter.png"
+                src="images/twitter.svg"
                 alt="twitter"
                 style="filter: invert(100%)"
-                width="30"
+                width="110"
             /></a>
             <a href="#" title="link to linkedin"
-              ><img src="images/linkedin.png" alt="linkedin" width="30"
+              ><img
+                src="images/share.svg"
+                alt="linkedin"
+                style="filter: invert(100%)"
+                width="110"
             /></a>
             <a href="#" title="link to share"
               ><img
-                src="images/share.png"
+                src="images/share.svg"
                 alt="share"
                 style="filter: invert(100%)"
-                width="30"
+                width="110"
             /></a>
           </div>
         </div>
