--- a/public/template/index.css
+++ b/public/template/index.css
@@ -1,4 +1,15 @@
 /* GENERAL - GRID LAYOUT GLOBAL */
+@font-face {
+  font-family: "gothamBold";
+  src: url(fonts/gothamBold/gothamBold.eot) format("oet"),
+    url(fonts/gothamBold/gothamBold.ttf) format("tff"),
+    url(fonts/gothamBold/gothamBold.woff) format("woff"),
+    url(fonts/gothamBold/gothamBold.woff2) format("woff2");
+  font-family: "gothamLight";
+  src: url(fonts/gothamLight/Metropolis-Medium.otf) format("otf"),
+    url(fonts/gothamLight/Metropolis-MediumItalic.otf) format("otf");
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -8,13 +19,13 @@ body {
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  font-family: arial, sans-serif;
+  font-family: "gothamLight", arial, sans-serif;
 }
 
 header {
   grid-area: 1 / 1 / 2 / 6;
   color: white;
-  background-color: black;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,7 +43,7 @@ footer {
   display: flex;
 }
 .highlight {
-  color: black;
+  color: #000000;
   background: white;
 }
 
@@ -191,14 +202,14 @@ footer {
 .newsletter-container {
   display: flex;
   justify-content: space-between;
-  background: #121111;
+  background: #1b1b1b;
   padding: 10px;
   margin: 20px 0;
   width: 800px;
 }
 .newsletter-container input {
   align-self: center;
-  background: #2e2e2e;
+  background: #3b3b3b;
   border: none;
   height: 35px;
   width: 75%;
