css of edition festival part

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -37,19 +37,14 @@
             src="images/loupe.png"
             alt="search-loup"
             style="filter: invert(100%)"
-            width="40
+            width="60
             "
           />
         </div>
       </div>
       <div class="header-row2">
         <div class="main-logo">
-          <h3>FESTIVAL INTERNATIONAL</h3>
-          <h1>
-            <img src="images/sens.png" alt="sens" width="160" />
-            <img src="images/interdits.png" alt="interdits" width="280" />
-          </h1>
-          <h3>THEATRE DE L'URGENCE</h3>
+          <img src="images/logosens.svg" alt="logo du festival" width="700" />
         </div>
         <div class="next-festival-date">
           <div class="edition">
@@ -59,9 +54,12 @@
               <p>édition</p>
             </div>
           </div>
-          <p>du <span>16</span> au <span>27</span></p>
-          <p>Octobre 2021</p>
-          <p>LYON METROPOLE</p>
+          <div class="edition-date">
+            <p>du <span>16</span> au <span>27</span></p>
+            <p>Octobre 2021</p>
+            <p>LYON METROPOLE</p>
+          </div>
+
         </div>
         <div class="billetterie-programme">
           <a href="#" title="billetterie" class="highlight">BILLETTERIE </a>
