--- a/public/template/index.css
+++ b/public/template/index.css
@@ -29,7 +29,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 200px;
+  height: 280px;
   width: 100%;
 }
 main {
@@ -45,6 +45,8 @@ footer {
 .highlight {
   color: #000000;
   background: white;
+  font-weight: bold;
+  font-size: 1.1em;
 }
 
 a {
@@ -58,8 +60,9 @@ a {
   justify-content: space-between;
   flex-wrap: nowrap;
   align-items: flex-end;
-  margin: 5px 10px 0 30px;
+  margin: 10px 30px 0 60px;
   padding: 0;
+  font-size: 1.2em;
 }
 .fr-en {
   display: flex;
@@ -77,42 +80,22 @@ a {
 .header-row2 {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-}
-.header-row2 h1 {
-  font-size: 2.5em;
+  align-items: center;
 }
 
 .main-logo {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  margin: 20px;
   min-width: 500px;
-  border-right: solid white 3px;
-}
-
-.main-logo h1,
-h3 {
-  margin: 0;
-}
-.main-logo h1 {
-  font-size: 3.5em;
-}
-.main-logo h1 span {
-  color: red;
-}
-.main-logo :nth-child(3) {
-  color: red;
-  margin-left: 230px;
+  margin-right: 30px;
+  margin-bottom: -40px;
 }
 
 .next-festival-date {
   display: flex;
   flex-direction: column;
+  padding-left: 30px;
   font-weight: bold;
-  min-width: 150px;
-  padding-bottom: 30px;
+  min-width: 200px;
+  border-left: solid white 4px;
 }
 .next-festival-date,
 p {
@@ -120,31 +103,32 @@ p {
 }
 .next-festival-date .edition {
   display: flex;
-  height: 40px;
+  height: 70px;
 }
 .next-festival-date .edition-text {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .next-festival-date .edition :nth-child(1) {
-  font-size: 1.5em;
+  font-size: 1.8em;
 }
 .next-festival-date .edition :nth-child(2) {
-  font-size: 0.9em;
+  font-size: 1.2em;
 }
 /* edition number */
 .next-festival-date .edition .edition-number {
-  font-size: 2.6em;
+  font-size: 4em;
 }
 .next-festival-date p span {
-  font-size: 1.2em;
   color: red;
 }
+.next-festival-date .edition-date {
+  font-size: 1.5em;
+}
 /* Lyon metropole */
-.next-festival-date :nth-child(4) {
+.next-festival-date .edition-date :nth-child(3) {
   font-size: 0.6em;
-  padding-left: 2px;
+  padding-left: 5px;
 }
 
 .billetterie-programme {
