--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -37,14 +37,13 @@
             src="images/loupe.png"
             alt="search-loup"
             style="filter: invert(100%)"
-            width="60
-            "
+            width="40"
           />
         </div>
       </div>
       <div class="header-row2">
         <div class="main-logo">
-          <img src="images/logosens.svg" alt="logo du festival" width="700" />
+          <img src="images/logosens.svg" alt="logo du festival" width="auto"/>
         </div>
         <div class="next-festival-date">
           <div class="edition">
@@ -71,7 +70,7 @@
             ><img
               src="images/facebook.svg"
               alt="facebook"
-              width="110"
+              width="90"
               style="filter: invert(100%)"
           /></a>
           <a href="#" title="link to instagram"
@@ -79,20 +78,20 @@
               src="images/insta.svg"
               alt="instagram"
               style="filter: invert(100%)"
-              width="110"
+              width="90"
           /></a>
           <a href="#" title="link to twitter"
             ><img
               src="images/twitter.svg"
               alt="twitter"
               style="filter: invert(100%)"
-              width="110"
+              width="90"
           /></a>
           <a href="#" title="link to linkedin"
             ><img
               src="images/share.svg"
               alt="linkedin"
-              width="110"
+              width="90"
               style="filter: invert(100%)"
           /></a>
           <a href="#" title="link to share"
@@ -100,7 +99,7 @@
               src="images/share.svg"
               alt="share"
               style="filter: invert(100%)"
-              width="110"
+              width="90"
           /></a>
         </div>
       </div>
