--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="header-row1">
-        <div class="fr-en">
+        <div class="fr-en fr-en-right">
           <p>F R</p>
           <span> | </span>
           <p>E N</p>
