--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -8,101 +8,104 @@
   </head>
   <body>
     <header>
-      <div class="header-row1">
-        <div class="fr-en fr-en-right">
-          <p>F R</p>
-          <span> | </span>
-          <p>E N</p>
+      <div class="wrapper-header">
+        <div class="header-row1">
+          <div class="fr-en fr-en-right">
+            <p>F R</p>
+            <span> | </span>
+            <p>E N</p>
+          </div>
+          <div class="highlight">NEWSLETTER</div>
+          <div class="fr-en nav-bar">
+            <p>Accueil</p>
+            <span> | </span>
+            <p>Festival</p>
+            <span> | </span>
+            <p>Avec les publics</p>
+            <span> | </span>
+            <p>Association</p>
+            <span> | </span>
+            <p>Actualités</p>
+            <span> | </span>
+            <p>Archives</p>
+            <span> | </span>
+            <p>Espace pros</p>
+            <span> | </span>
+            <p>Contacts</p>
+          </div>
+          <div class="search-magnifier">
+            <img
+              src="images/loupe.png"
+              alt="search-magnifier"
+              style="filter: invert(100%)"
+              width="40"
+            />
+          </div>
         </div>
-        <div class="highlight">NEWSLETTER</div>
-        <div class="fr-en nav-bar">
-          <p>Accueil</p>
-          <span> | </span>
-          <p>Festival</p>
-          <span> | </span>
-          <p>Avec les publics</p>
-          <span> | </span>
-          <p>Association</p>
-          <span> | </span>
-          <p>Actualités</p>
-          <span> | </span>
-          <p>Archives</p>
-          <span> | </span>
-          <p>Espace pros</p>
-          <span> | </span>
-          <p>Contacts</p>
-        </div>
-        <div class="search-loup">
-          <img
-            src="images/loupe.png"
-            alt="search-loup"
-            style="filter: invert(100%)"
-            width="40"
-          />
-        </div>
-      </div>
-      <div class="header-row2">
-        <div class="main-logo">
-          <img src="images/logosens.svg" alt="logo du festival" width="auto"/>
-        </div>
-        <div class="next-festival-date">
-          <div class="edition">
-            <div class="edition-number">7</div>
-            <div class="edition-text">
-              <p>ème</p>
-              <p>édition</p>
+        <div class="header-row2">
+          <div class="main-logo">
+            <img src="images/logosens.svg" alt="logo du festival" />
+          </div>
+          <div class="next-festival-date">
+            <div class="edition">
+              <div class="edition-number">7</div>
+              <div class="edition-text">
+                <p>ème</p>
+                <p>édition</p>
+              </div>
             </div>
+            <div class="edition-date">
+              <p>du <span>16</span> au <span>27</span></p>
+              <p>Octobre 2021</p>
+              <p>LYON METROPOLE</p>
+            </div>
+  
           </div>
-          <div class="edition-date">
-            <p>du <span>16</span> au <span>27</span></p>
-            <p>Octobre 2021</p>
-            <p>LYON METROPOLE</p>
+          <div class="billetterie-programme">
+            <a href="#" title="billetterie" class="highlight">BILLETTERIE </a>
+            <a href="#" title="programme" class="highlight">PROGRAMME</a>
           </div>
-
-        </div>
-        <div class="billetterie-programme">
-          <a href="#" title="billetterie" class="highlight">BILLETTERIE </a>
-          <a href="#" title="programme" class="highlight">PROGRAMME</a>
-        </div>
-
-        <div class="social-network">
-          <a href="#" title="link to facebook"
-            ><img
-              src="images/facebook.svg"
-              alt="facebook"
-              width="90"
-              style="filter: invert(100%)"
-          /></a>
-          <a href="#" title="link to instagram"
-            ><img
-              src="images/insta.svg"
-              alt="instagram"
-              style="filter: invert(100%)"
-              width="90"
-          /></a>
-          <a href="#" title="link to twitter"
-            ><img
-              src="images/twitter.svg"
-              alt="twitter"
-              style="filter: invert(100%)"
-              width="90"
-          /></a>
-          <a href="#" title="link to linkedin"
-            ><img
-              src="images/share.svg"
-              alt="linkedin"
-              width="90"
-              style="filter: invert(100%)"
-          /></a>
-          <a href="#" title="link to share"
-            ><img
-              src="images/share.svg"
-              alt="share"
-              style="filter: invert(100%)"
-              width="90"
-          /></a>
+  
+          <div class="social-network">
+            <a href="#" title="link to facebook" target="_blank"
+              ><img
+                src="images/facebook.svg"
+                alt="facebook"
+                width="80"
+                style="filter: invert(100%)"
+            /></a>
+            <a href="#" title="link to instagram"
+              ><img
+                src="images/insta.svg"
+                alt="instagram"
+                style="filter: invert(100%)"
+                width="80"
+            /></a>
+            <a href="#" title="link to twitter"
+              ><img
+                src="images/twitter.svg"
+                alt="twitter"
+                style="filter: invert(100%)"
+                width="80"
+            /></a>
+            <a href="#" title="link to linkedin"
+              ><img
+                src="images/share.svg"
+                alt="linkedin"
+                width="80"
+                style="filter: invert(100%)"
+            /></a>
+            <a href="#" title="link to share"
+              ><img
+                src="images/share.svg"
+                alt="share"
+                style="filter: invert(100%)"
+                width="80"
+            /></a>
+          </div>
         </div>
       </div>
+      
     </header>
     <main>This is the main</main>
     <footer>
