--- a/FRONT/template/index.css
+++ b/FRONT/template/index.css
@@ -20,6 +20,7 @@ body {
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   font-family: "gothamLight", arial, sans-serif;
+  font-size: 14px;
 }
 
 header {
@@ -29,8 +30,11 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 250px;
-  width: 100%;
+  height: 140px;
+}
+.wrapper-header {
+  width: 1080px;
+  margin: 0 auto;
 }
 main {
   grid-area: 2 / 1 / 5 / 6;
@@ -59,23 +63,20 @@ a {
   justify-content: space-between;
   flex-wrap: nowrap;
   align-items: flex-end;
-  margin: 10px 30px 0 30px;
-  font-size: 1.2em;
 }
 .fr-en {
   display: flex;
   flex-wrap: nowrap;
+  padding-left: 30px;
 }
 .fr-en span {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   color: red;
 }
 .nav-bar {
   display: flex;
   flex-wrap: nowrap;
-  min-width: 50%;
-  font-size: 0.8em;
 }
 
 /* HEADER ROW 2 */
@@ -83,26 +84,27 @@ a {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  padding-bottom: 10px;
+  align-items: flex-end;
 }
 
 .main-logo {
-  margin-right: 30px;
+  margin-right: 20px;
   margin-bottom: -40px;
-  width: 38%;
-  min-width: 380px;
+}
+.main-logo img {
+  width: 400px;
 }
 
 .next-festival-date {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 30px;
-  padding-top: 0px;
+  padding-left: 20px;
+  margin-bottom: 30px;
   font-weight: bold;
   min-width: 180px;
-  max-height: 70%;
-  border-left: solid white 4px;
+  height: 70px;
+  border-left: solid white 2px;
 }
 .next-festival-date,
 p {
@@ -116,49 +118,41 @@ p {
   flex-direction: column;
 }
 .next-festival-date .edition :nth-child(1) {
-  font-size: 1.4em;
+  font-size: 20px;
 }
-.next-festival-date .edition :nth-child(2) {
-  font-size: 1em;
-}
+
 /* edition number */
 .next-festival-date .edition .edition-number {
-  font-size: 3em;
+  font-size: 40px;
   margin-bottom: -8px;
 }
 .next-festival-date p span {
   color: red;
 }
-.next-festival-date .edition-date {
-  flex-wrap: nowrap;
-  font-size: 1.1em;
-}
+
 /* Lyon metropole */
 .next-festival-date .edition-date :nth-child(3) {
-  font-size: 0.6em;
+  font-size: 9px;
 }
 
 .billetterie-programme {
   display: flex;
   flex-grow: 1;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
   align-items: flex-end;
-  font-size: 1.2em;
+  font-size: 16px;
 }
 .billetterie-programme a {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .social-network {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: center;
-  align-items: flex-end;
-  margin-bottom: -30px;
-  min-width: 20%;
+  margin-bottom: -40px;
 }
 .social-network a {
-  margin-right: -55px;
+  margin-right: -50px;
 }
 
 /* FOOTER CSS */
@@ -259,7 +253,7 @@ footer {
   .fr-en-right {
     display: none;
   }
-  .search-loup {
+  .search-magnifier {
     display: none;
   }
   header {
